--- a/lora-comm/dragino_lora_app/Makefile
+++ b/lora-comm/dragino_lora_app/Makefile
@@ -8,7 +8,7 @@ dragino_lora_app: main.o
 	$(CC) main.o  $(LIBS) -o dragino_lora_app
 
 main.o: main.c
-	$(CC) $(CFLAGS) main.c rgb_file.c
+	$(CC) $(CFLAGS) main.c
 
 clean:
 	rm *.o dragino_lora_app	
